--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Basic application with Webpack</title>
-  <link href="main.css">
+    <meta charset="utf-8">
+    <title>Webpack Boilerplate</title>
+    
+    <link rel="stylesheet" href="dist/bundle.css">
+    <script src="dist/bundle.js"></script>
 </head>
+
 <body>
-<h1>WebPack works !!</h1>
-<script src="dist/bundle.js"></script>
 </body>
+
 </html>
