--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Webpack Boilerplate</title>
-    
+    <title>hgftufgfgf Boilerplate</title>
+
     <link rel="stylesheet" href="dist/bundle.css">
     <script src="dist/bundle.js"></script>
 </head>
