--- a/app/src/template.html
+++ b/app/src/template.html
@@ -67,6 +67,6 @@
     <div class="card mt-5">
       <div class="card-body">The result is: <span id="result"></span></div>
     </div>
-    <img src="./assets/webpack.svg" />
+    <img src="assets/svg/webpack.svg" />
   </body>
 </html>
