--- a/app/src/template.html
+++ b/app/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Webpack Demo</title>
+    <link href="assets/css/another.css">
   </head>
   <body class="container">
     <!-- Bootstrap Navbar -->
@@ -67,6 +68,6 @@
     <div class="card mt-5">
       <div class="card-body">The result is: <span id="result"></span></div>
     </div>
-    <img src="assets/svg/webpack.svg" />
+    <img src="assets/images/webpack.svg" />
   </body>
 </html>
