--- a/app/src/template.html
+++ b/app/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Webpack Demo</title>
-    <link href="assets/css/another.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/another.css">
   </head>
   <body class="container">
     <!-- Bootstrap Navbar -->
